Update English texts

--- a/ITNoTT/localisation/aus_focus_l_english.yml
+++ b/ITNoTT/localisation/aus_focus_l_english.yml
@@ -56,7 +56,7 @@
   AUS_war_YUG:0 "Retake Vojvodina and Croatia"
   AUS_war_YUG_desc:0 "The Balkan Shield Force may have united most of the powderkeg, but they still owe us our former lands. Not to mention, with their defeat, we will finally get revenge for the death of the Archduke!"
   AUS_wunderwaffe:0 "Wunderwaffe von Österreich"
-  AUS_wunderwaffe_desc:0 "Governments across the world are working day and night to establish weaponry that will separate the winners from the losers. This weapon's name? Nuclear warheads."
+  AUS_wunderwaffe_desc:0 "Governments across the world are working day and night to establish weaponry that will separate the winners from the losers. This weapon's name? The Atomic Bomb."
   AUS_invests:0 "Encourage Foreign Investment"
   AUS_invests_desc:0 "If we encourage and subsidise foreign investments, it will certainly boost our economy."
   AUS_ships:0 "Naval Innovations"
