--- a/ITNoTT/localisation/bel_focus_l_english.yml
+++ b/ITNoTT/localisation/bel_focus_l_english.yml
@@ -21,12 +21,12 @@
  BEL_election_victory_catholic_desc:0 "After a democratic election, the Catholic-conservative party assumes the leadership of our country."
  BEL_unemployment_measures:0 "Unemployment Measures"
  BEL_unemployment_measures_desc:0 "We have had some issues with high unemployment for a while now. These should be fixed. Get our citizens off the streets!"
- BEL_devalue_the_currency:0 "Devalue the Currency"
+ BEL_devalue_the_currency:0 "Devalue the Belgian Franc"
  BEL_devalue_the_currency_desc:0 "With devaluation, exports become cheaper and thus more attractive for foreign companies. This will increase demands for certain products, allowing us to create more jobs."
  BEL_40h_work_week:0 "40 Hour Work Week"
  BEL_40h_work_week_desc:0 "In order to increase our industrial potential, we have to prolong the work week to 40 hours. This will however cause some issues with our citizens, but it cannot be helped. We need all the output we can get!"
  BEL_election_victory_rex:0 "Rex Election Victory"
- BEL_election_victory_rex_desc:0 "After a democratic election, the Rex-nationalist party assumes the leadership of our country."
+ BEL_election_victory_rex_desc:0 "After a democratic election the VLB, dominated by the Rex-nationalist party, assumes the leadership of our country."
  BEL_reduce_flemish_autonomy:0 "Reduce Flemish Autonomy"
  BEL_reduce_flemish_autonomy_desc:0 "Our country is currently divided between Wallonia and Flanders. Both have different cultures and languages, and contain movements demanding increased autonomy and, in some cases, even separation. By further centralizing the state, we will improve the situation."
  BEL_embrace_catholicism:0 "Embrace Catholicism"
@@ -34,7 +34,7 @@
  BEL_corporatism:0 "Corporatism"
  BEL_corporatism_desc:0 "Instead of relying on political parties, we should attempt to give multiple corporate sectors an increased say in politics."
  BEL_election_victory_verdinaso:0 "Verdinaso Election Victory"
- BEL_election_victory_verdinaso_desc:0 "After a democratic election, the Verdinaso-nationalist party assumes the leadership of our country."
+ BEL_election_victory_verdinaso_desc:0 "After a democratic election the VLB, dominated by the Verdinaso-nationalist party, assumes the leadership of our country."
  BEL_declare_flemish_independence:0 "Declare Flemish Independence"
  BEL_declare_flemish_independence_desc:0 "We as Flemish were dragged into this pitiful excuse of a country by the French-speaking rebels in 1830. We do not wish to continue to co-exist with them."
  BEL_election_victory_communist:0 "Communist Election Victory"
@@ -45,6 +45,10 @@
  BEL_redistribute_means_production_desc:0 "The means of production belong to those who use them! Redistribute them among the workers!"
  BEL_classless_society:0 "Classless Society"
  BEL_classless_society_desc:0 "Classes are a cancer on modern society. They only divide people. Removing classes should unite them!"
+ BEL_election_victory_monarchist:0 "Monarchist Election Victory"
+ BEL_election_victory_monarchist_desc:0 "After a democratic election the Monarchiste party assumes the leadership of our country."
+ BEL_Bel_King:0 "King of all Belgians"
+ BEL_Bel_King_desc:0 "Though the gap between Waloons and Flems may never truly be closed, by following in his father Albert's footsteps, the King may continue to unite the nation behind him, as King of all the Belgians."
  BEL_declare_neutrality:0 "Declare Neutrality"
  BEL_declare_neutrality_desc:0 "We seek no quarrel with anyone. We remain neutral in any conflict."
  BEL_expansionism:0 "Expansionism"
@@ -172,7 +176,10 @@
  BEL_state_christianity:0 "State Christianity"
  BEL_wallonie_flanders_idea:0 "Divided Nation"
  BEL_wallonie_flanders_idea_desc:0 "Despite Belgium being a small nation, the Belgian population is divided between Flanders and Wallonia, one striving for its independence from the other."
+ BEL_wallonie_flanders_idea_unified:0 "Burgeoning National Identity"
+ BEL_wallonie_flanders_idea_unified_desc:0 "Though the gulf between the Waloons and Flemish remains, the tensions associated with them have begun to fade, and a true national identity is beginning to emerge."
  BEL_armed_neutrality:0 "Armed Neutrality"
+ BEL_armed_neutrality_desc:0 "For the expasionist nations of the world to truly respect our claim to neutrality, we must stand armed and ready to mobilize at the drop of a hat."
  BEL_blockade_idea:0 "Blockade Preparations"
  BEL_expansionism_idea:0 "Expansionism"
  BEL_union_idea:0 "Union Power"
@@ -275,14 +282,27 @@
  belgium.11.b:0 "We need those guns ourselves"
  belgium.12.t:0 "1936 Elections!"
  belgium.12.d:0 "One of the most anticipated elections in continental Europe is finally underway.\nThe Kingdom of Belgium is facing a large diversity in canditates and running parties. On one side the left-wing Communist party is pushing for Marxist reforms while the Rexist party is calling for nationalist unity and prosperety of the Belgian nation...\nThese elections will shape the future of the Belgian Kingdom."
- belgium.12.a:0 "Go Left!"
- belgium.12.b:0 "Remain Centre!"
- belgium.12.c:0 "Go Right!"
- belgium.13.t:0 "1939 Elections!"
- belgium.13.d:0 "1939 general elections are here. At the election there are 3 main oppositions present; left-wing (socialists), centre-wing (catholic) and the right-wing (monarchists).\nThe choice is yours."
- belgium.13.a:0 "Left"
- belgium.13.b:0 "Centre"
- belgium.13.c:0 "Right"
+ belgium.12.a:0 "It's about time the people steered the nation!"
+ belgium.12.b:0 "Now more than ever must we find peace in moderation."
+ belgium.12.c:0 "Order, Glory, and Strength above all!"
+ belgium.13.t:0 "Voters Drift Left!"
+ belgium.13.d:0 "The results are in, and the Socialist-Marxist Coalition has come out on top! Though, who won more seats? The hardline Communists, or the more moderate Labour party?"
+ belgium.13.a:0 "The proletariat shall run the nation."
+ belgium.13.b:0 "Right to the workers! Well, the convenient ones, anyway"
+ belgium.14.t:0 "Voters Hold Centre!"
+ belgium.14.d:0 "To the relief of most in Europe, the centrist parties have maintained a critical majority in the house. But which party dominates the coalition established to keep the extremists at bay?"
+ belgium.14.a:0 "Liberal Democracy stands stalwart in the face of turmoil."
+ belgium.14.b:0 "Statecraft is best left in the hands of the lord, and his teachings."
+ belgium.14.c:0 "The King returns! Hail his Majesty Leopold III!"
+ belgium.15.t:0 "A VLB Victory!?"
+ belgium.15.d:0 "The Results are in, and in a shock to international onlookers, far-right Extremism seems to be the flavor of the day! The VLB has come out on top, and it is now up to the winners to decide which bloc will dominate the coalition. Verdinaso, or Rex?"
+ belgium.15.a:0 "It has come time to die for a Greater Belgium!"
+ belgium.15.b:0 "We will find greatness in our Dutch brothers! Whether they want it, or not!"
+ belgium.16.t:0 "1939 Elections!"
+ belgium.16.d:0 "1939 general elections are here. At the election there are 3 main oppositions present; left-wing (socialists), centre-wing (catholic) and the right-wing (monarchists).\nThe choice is yours."
+ belgium.16.a:0 "Left"
+ belgium.16.b:0 "Centre"
+ belgium.16.c:0 "Right"
  belgium.1005.t:0 "Formation of Greater Belgium!"
  belgium.1005.d:0 "An official statement was issued by the government of Belgium, proclaiming 'Greater Belgium'.\nThis is surely an aggressive and an expansionist oriented move. France and the United Kingdom remain silent on the matter.\nOnly time will tell how the situation will unfold..."
  belgium.1005.a:0 "Long live Greater Belgium!"
