--- a/ITNoTT/localisation/chi_events_l_english.yml
+++ b/ITNoTT/localisation/chi_events_l_english.yml
@@ -198,7 +198,7 @@
  china.1054.d:0 "The Southern Republic is now at war with the Qing. It is now time to fullfill our part of the agreement."
  china.1054.a:0 "The Pact will be fullfilled."
 
- china.1055.t:0 "Wang wants to find another solution then war"
+ china.1055.t:0 "Wang wants to find another solution than war"
  china.1055.d:0 "The Southern Republic is now at war with the Qing. It is now time to fullfill our part of the agreement."
  china.1055.a:0 "We are tired of fighting"
  china.1055.b:0 "War is the only option"
