--- a/ITNoTT/localisation/chi_ideas_l_english.yml
+++ b/ITNoTT/localisation/chi_ideas_l_english.yml
@@ -25,7 +25,7 @@
  CHI_edu_reform:0 "Education Reform"
  CHI_weapon_payment_eng:0 "Weapon Payments"
  CHI_weapon_payment:0 "Weapon Payments"
- CHI_absolut_control:0 "Absolute Controll"
+ CHI_absolut_control:0 "Absolute Control"
  CHI_unite_morale:0 "Wars for Unification"
  CHI_longer_workshifts:0 "Longer Workshifts"
  CHI_seized_assets:0 "Seized Assets"
