--- a/ITNoTT/localisation/countries_l_english.yml
+++ b/ITNoTT/localisation/countries_l_english.yml
@@ -90,8 +90,8 @@
 
  FRA_fascism:0 "French Empire"
  FRA_fascism_DEF:0 "The French Empire"
- FRA_democratic:0 "French Republic"
- FRA_democratic_DEF:0 "The French Republic"
+ FRA_democratic:0 "France"
+ FRA_democratic_DEF:0 "France"
  FRA_neutrality:0 "Kingdom of France"
  FRA_neutrality_DEF:0 "Kingdom of France"
  FRA_socialist:0 "French Republic"
@@ -195,6 +195,7 @@
  CZE_democratic_ADJ:0 "Czech"
  CZE_neutrality_ADJ:0 "Czech"
  CZE_communism_ADJ:0 "Bohemo-Moravian"
+
  POL_fascism:0 "Polish State"
  POL_fascism_DEF:0 "The Polish State"
  POL_democratic:0 "Polish Republic"
@@ -203,10 +204,16 @@
  POL_communism_DEF:0 "The Polish People's Republic"
  POL_neutrality:0 "Kingdom of Poland"
  POL_neutrality_DEF:0 "The Kingdom of Poland"
+ POL_conservatives:0 "Poland"
+ POL_conservatives_DEF:0 "Poland"
+ POL_socialist:0 "Polish Republic"
+ POL_socialist_DEF:0 "The Polish Republic"
  POL_fascism_ADJ:0 "Polish"
  POL_democratic_ADJ:0 "Polish"
  POL_communism_ADJ:0 "Polish"
  POL_neutrality_ADJ:0 "Polish"
+ POL_socialist_ADJ:0 "Polish"
+ POL_conservatives_ADJ:0 "Polish"
 
  AUS_fascism:0 "Austrian Empire"
  AUS_fascism_DEF:0 "The Austrian Empire"
@@ -322,8 +329,8 @@
  ITA_socialist_ADJ:0 "Italian"
  ITA_conservatives_ADJ:0 "Italian"
 
- ROM_fascism:0 "Fascist State of Romania"
- ROM_fascism_DEF:0 "The Fascist State of Romania"
+ ROM_fascism:0 "Iron Guard Romania"
+ ROM_fascism_DEF:0 "The Iron Guard Romania"
  ROM_democratic:0 "Romania"
  ROM_democratic_DEF:0 "Romania"
  ROM_neutrality:0 "Kingdom of Romania"
@@ -444,6 +451,7 @@
  BUL_democratic_ADJ:0 "Bulgarian"
  BUL_neutrality_ADJ:0 "Bulgarian"
  BUL_communism_ADJ:0 "Bulgarian"
+
  POR_fascism:0 "Kingdom of Portugal"
  POR_fascism_DEF:0 "The Kingdom of Portugal"
  POR_democratic:0 "Portuguese Republic"
@@ -456,11 +464,16 @@
  POR_democratic_ADJ:0 "Portuguese"
  POR_neutrality_ADJ:0 "Portuguese"
  POR_communism_ADJ:0 "Portuguese"
+
  FIN_fascism:0 "Kingdom of Finland"
  FIN_fascism_DEF:0 "The Kingdom of Finland"
  FIN_democratic:1 "Republic of Finland"
  FIN_democratic_DEF:1 "The Republic of Finland"
+ FIN_socialist:0 "Republic of Finland"
+ FIN_socialist_DEF:0 "The Republic of Finland"
  FIN_neutrality:1 "Finland"
+ FIN_conservatives_DEF:0 "Finland"
+ FIN_conservatives:0 "Finland"
  FIN_neutrality_DEF:1 "Finland"
  FIN_communism:0 "Socialist Republic of Finland"
  FIN_communism_DEF:0 "The Socialist Republic of Finland"
@@ -468,6 +481,9 @@
  FIN_democratic_ADJ:0 "Finnish"
  FIN_neutrality_ADJ:0 "Finnish"
  FIN_communism_ADJ:0 "Finnish"
+ FIN_socialist_ADJ:0 "Finnish"
+ FIN_conservatives_ADJ:0 "Finnish"
+
  IRE_fascism:0 "Celtic Empire"
  IRE_fascism_DEF:0 "The Celtic Empire"
  IRE_democratic:0 "Ireland"
@@ -533,12 +549,15 @@
  BOL_democratic_ADJ:0 "Bolivian"
  BOL_neutrality_ADJ:0 "Bolivian"
  BOL_communism_ADJ:0 "Bolivian"
+
  BRA_fascism:0 "Integralist State of Brazil"
  BRA_fascism_DEF:0 "The Integralist State of Brazil"
  BRA_democratic:0 "Brazilian Republic"
  BRA_democratic_DEF:0 "The Brazilian Republic"
- BRA_neutrality:0 "United States of Brazil"
- BRA_neutrality_DEF:0 "The United States of Brazil"
+ BRA_neutrality:0 "Brazil"
+ BRA_neutrality_DEF:0 "Brazil"
+ BRA_conservatives:0 "Brazil"
+ BRA_conservatives_DEF:0 "Brazil"
  BRA_communism:0 "Brazilian Socialist Republic"
  BRA_communism_DEF:0 "The Brazilian Socialist Republic"
  BRA_fascism_ADJ:0 "Brazilian"
@@ -727,8 +746,8 @@
  MEX_fascism_DEF:0 "The Mexican Empire"
  MEX_democratic:0 "Mexico"
  MEX_democratic_DEF:0 "Mexico"
- MEX_neutrality:0 "Mexican States"
- MEX_neutrality_DEF:0 "The Mexican States"
+ MEX_neutrality:0 "Mexico"
+ MEX_neutrality_DEF:0 "Mexico"
  MEX_communism:0 "Mexican Socialist Republic"
  MEX_communism_DEF:0 "The Mexican Socialist Republic"
  MEX_fascism_ADJ:0 "Mexican"
@@ -795,18 +814,26 @@
  PAR_democratic_ADJ:0 "Paraguayan"
  PAR_neutrality_ADJ:0 "Paraguayan"
  PAR_communism_ADJ:0 "Paraguayan"
+
  PER_fascism:0 "Persian Empire"
  PER_fascism_DEF:0 "The Persian Empire"
  PER_democratic:0 "Iran"
  PER_democratic_DEF:0 "Iran"
- PER_neutrality:0 "Persia"
- PER_neutrality_DEF:0 "Persia"
+ PER_neutrality:0 "Iran"
+ PER_neutrality_DEF:0 "Iran"
+ PER_conservatives:0 "Iran"
+ PER_conservatives_DEF:0 "Iran"
  PER_communism:0 "Iranian Commune"
  PER_communism_DEF:0 "The Iranian Commune"
+ PER_socialist:0 "Iranian Commune"
+ PER_socialist_DEF:0 "The Iranian Commune"
  PER_fascism_ADJ:0 "Persian"
  PER_democratic_ADJ:0 "Iranian"
  PER_neutrality_ADJ:0 "Iranian"
  PER_communism_ADJ:0 "Iranian"
+ PER_conservatives_ADJ:0 "Iranian"
+ PER_socialist_ADJ:0 "Iranian"
+
  PHI_fascism:0 "Nationalist State of the Philippines"
  PHI_fascism_DEF:0 "Nationalist State of the Philippines"
  PHI_democratic:0 "Philippines"
@@ -1590,8 +1617,8 @@
  #SOVIET UNION OPTION
  RUS_1_democratic:0 "Russian Republic"
  RUS_1_democratic_DEF:0 "The Russian Republic"
- RUS_1_neutrality:0 "Russian Empire"
- RUS_1_neutrality_DEF:0 "The Russia Empire"
+ RUS_1_neutrality:0 "Imperial Russia"
+ RUS_1_neutrality_DEF:0 "The Imperial Russia"
  RUS_1_fascism:0 "Nationalist Russia"
  RUS_1_fascism_DEF:0 "The Nationalist Russia"
  RUS_1_communism:0 "Soviet Union"
@@ -1609,8 +1636,8 @@
  
  RUS_democratic:0 "Russian Republic"
  RUS_democratic_DEF:0 "The Russian Republic"
- RUS_neutrality:0 "Russian Empire"
- RUS_neutrality_DEF:0 "The Russia Empire"
+ RUS_neutrality:0 "Imperial Russia"
+ RUS_neutrality_DEF:0 "The Imperial Russia"
  RUS_fascism:0 "Nationalist Russia"
  RUS_fascism_DEF:0 "The Nationalist Russia"
  RUS_communism:0 "Soviet Russia"
@@ -1628,8 +1655,8 @@
  #SOVIET RUSSIA OPTION
  RUS_2_democratic:0 "Russian Republic"
  RUS_2_democratic_DEF:0 "The Russian Republic"
- RUS_2_neutrality:0 "Russian Empire"
- RUS_2_neutrality_DEF:0 "The Russia Empire"
+ RUS_2_neutrality:0 "Imperial Russia"
+ RUS_2_neutrality_DEF:0 "The Imperial Russia"
  RUS_2_fascism:0 "Nationalist Russia"
  RUS_2_fascism_DEF:0 "The Nationalist Russia"
  RUS_2_communism:0 "Russian SSR"
@@ -1851,7 +1878,12 @@
  GER_confederation_communism_ADJ:0 "German"
  GER_confederation_conservatives_ADJ:0 "German"
  GER_confederation_socialist_ADJ:0 "German"
- 
+
+ GER_great_fascism:0 "Greater German Reich"
+ GER_great_fascism_DEF:0 "The Greater German Reich"
+ GER_great_neutrality:0 "Greater German Reich"
+ GER_great_neutrality_DEF:0 "The Greater German Reich"
+
  AUS_vaterland_fascism:0 "Austrian Reich"
  AUS_vaterland_fascism_DEF:0 "The Austrian Reich"
  AUS_vaterland_democratic:0 "Austrian Republic of Germany"
