--- a/ITNoTT/localisation/ger_events_l_english.yml
+++ b/ITNoTT/localisation/ger_events_l_english.yml
@@ -188,3 +188,7 @@ GER_expand_wall:0 "New Decisions will be available to upgrade the Forts"
   holland.1004.t:0 "Holland's Embargo!"
   holland.1004.d:0 "The Dutch have accepted the British demands to cease any trade with us thus embargoing us, this makes them our enemy!"
   holland.1004.a:0 "War!"
+  holland.1005.t:0 "Germany requests military access!"
+  holland.1005.d:0 "The world's at war!\nOur country is under threat of an invasion. Germany has issued an official request to allow them to pass through our lands. If we decline, they say an intervention is inevitable..."
+  holland.1005.a:0 "Accept"
+  holland.1005.b:0 "Decline"
