--- a/ITNoTT/localisation/parties_l_english.yml
+++ b/ITNoTT/localisation/parties_l_english.yml
@@ -321,8 +321,8 @@
  BEL_conservatives_party:0 "Parti Catholique"
  BEL_conservatives_party_long:0 "Parti Catholique"
  BEL_neutrality_party:0 "Monarchistes"
- BEL_fascism_party:0 "Rex"
- BEL_fascism_party_long:0 "Parti Rexiste"
+ BEL_fascism_party:0 "VLB"
+ BEL_fascism_party_long:0 "Vlaams Nationaal Block"
 
  SWI_communism_party:0 "KPS"
  SWI_communism_party_long:0 "Kommunistische Partei der Schweiz"
