--- a/ITNoTT/localisation/tur_focus_l_english.yml
+++ b/ITNoTT/localisation/tur_focus_l_english.yml
@@ -135,8 +135,8 @@
  TUR_flex_desc:0 "Reinventing naval warfare to account for the advances in submarine technology will allow us to strike efficiently against enemy convoys."
  TUR_sub:0 "Submarine Effort"
  TUR_sub_desc:0 "Submarine warfare is the most exciting naval development since the invention of the torpedo boat. We would do well to not just protect against submarines, but also use them against enemy shipping."
- TUR_destroyer:0 "Destroyer Effort"
- TUR_destroyer_desc:0 "Studying the design and strategic use of submarines, we have also learned how to counter those strategies. Destroyers will be crucial for this."
+ TUR_destroyer_:0 "Destroyer Effort"
+ TUR_destroyer__desc:0 "Studying the design and strategic use of submarines, we have also learned how to counter those strategies. Destroyers will be crucial for this."
  TUR_communal_living:0 "Communal Living"
  TUR_communal_living_desc:0 "Our Communal Farms don't have living quarters attached to them. If we wish to contiue to build up our agricultural sector, we should invest in living quarters in our farms."
  TUR_steel_works:0 "Kastamonu Steel Works"
@@ -171,8 +171,8 @@
  TUR_russia_desc:0 "The Russians have punished and abused the Islamic people that they have conquered. We must free our brothers and sisters, death to Russia!"
  TUR_large:0 "Large Navy"
  TUR_large_desc:0 "Adapting our naval doctrines to accommodate large ships and ensuring the safety of our trade convoys will teach us much about what sort of ships we need."
- TUR_cruiser:0 "Cruiser Effort"
- TUR_cruiser_desc:0 "Before making forays into advanced battleship research, the smaller cruisers are in need of replacement."
+ TUR_cruiser_:0 "Cruiser Effort"
+ TUR_cruiser__desc:0 "Before making forays into advanced battleship research, the smaller cruisers are in need of replacement."
  TUR_capital_ship:0 "Capital Ship Effort"
  TUR_capital_ship_desc:0 "The nation with the most battleships will rule the oceans. Battleships and carriers represent the old and the new in naval superiority."
  TUR_clear_space:0 "Clear Space"
@@ -184,6 +184,10 @@
  TUR_ally_bulgaria_desc:0 ""
  TUR_ally_greeks:0 "Ally Greece"
  TUR_ally_greeks_desc:0 ""
+ TUR_reinforce_east:0 "Reinforce the Eastern Border"
+ TUR_reinforce_east_desc:0 "Our Eastern neighbour is the mighty Russia. We cannot possibly match their strengh but we could try defend against them."
+ TUR_reinforce_west:0 "Reinforce the Western Border"
+ TUR_reinforce_west_desc:0 "Our most important city Instanbul is located just short of our Western most border. We must fortify the cities approaches in order to secure the Borsphorus."
 ##### TOOLTIPS/FLAGS #####
  TUR_calph_council:0 "Has Established A Council Or Re-invited The Caliph"
  TUR_millet_tt:0 "Deploys §Y3 Milita Divisions§ In Antolia"
