--- a/ITNoTT/localisation/state_names_l_english.yml
+++ b/ITNoTT/localisation/state_names_l_english.yml
@@ -224,7 +224,7 @@
  STATE_223:0 "Tula"
  STATE_224:0 "Bryansk"
  STATE_225:0 "Sumy"
- STATE_226:0 "Dnipropetrovsk"
+ STATE_226:0 "Ekaterinoslav"
  STATE_227:0 "Yuzovka"
  STATE_228:0 "Luhansk"
  STATE_229:1 "Azerbaijan"
