--- a/ITNoTT/localisation/victory_points_l_english.yml
+++ b/ITNoTT/localisation/victory_points_l_english.yml
@@ -217,11 +217,11 @@
  VICTORY_POINTS_11241:0 "Vitebsk"
  VICTORY_POINTS_11225:0 "Samara"
  VICTORY_POINTS_11370:0 "Minsk"
- VICTORY_POINTS_11437:0 "Dnipropetrovsk"
+ VICTORY_POINTS_11437:0 "Ekaterinoslav"
  VICTORY_POINTS_11670:0 "Odessa"
  VICTORY_POINTS_12189:0 "Khabarovsk"
  VICTORY_POINTS_12320:0 "Yerevan"
- VICTORY_POINTS_10627:0 "Kyzyl"
+ VICTORY_POINTS_10627:0 "Belotsarsk"
  VICTORY_POINTS_4801:0 "Ulaanbaatar"
  VICTORY_POINTS_7799:0 "Uliastay"
  VICTORY_POINTS_7069:0 "Casablanca"
